--- a/ma1805-horror/index.html
+++ b/ma1805-horror/index.html
@@ -1,49 +1,18 @@
-
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>NULLSPACE MWAHAHAHA</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-  <div id="game-container">
-    <div id="title">NULLSPACE</div>
-    <button id="enter-btn">LET'S PLAY.</button>
-    <div id="horror-text"></div>
-  </div>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <script>
-    const btn = document.getElementById('enter-btn');
-    const textBox = document.getElementById('horror-text');
+    <title>Sketch</title>
 
-    const introLines = [
-      "You woke up in your office from a bad dream...",
-      "You start wondering where everyone went...",
-      "You try to remember what happened...",
-      "But your mind is blank.",
-      "Is this real?",
-      "It was dark...",
-      "And it was cold.",
-      "Cold like the void of space...",
+    <link rel="stylesheet" type="text/css" href="style.css">
 
-    ];
+    <script src="libraries/p5.min.js"></script>
+    <script src="libraries/p5.sound.min.js"></script>
+  </head>
 
-    btn.addEventListener('click', () => {
-      btn.style.display = 'none';
-      let index = 0;
-      textBox.style.opacity = 1;
-
-      const interval = setInterval(() => {
-        if (index < introLines.length) {
-          textBox.textContent += introLines[index] + "\n";
-          index++;
-        } else {
-          clearInterval(interval);
-        }
-      }, 2000);
-    });
-  </script>
-</body>
+  <body>
+    <script src="sketch.js"></script>
+  </body>
 </html>
